# uzon-rust

./: CHANGELOG.md  Cargo.toml  README.md
examples/: 01_parsing.rs  02_accessing_values.rs  03_building_values.rs  04_mutation.rs  05_arithmetic.rs  06_comparison.rs  07_iteration.rs  08_type_conversion.rs  09_serde.rs  10_stringify.rs  11_uzon_types.rs  12_evaluator.rs  conformance_eval.rs  conformance_parse.rs  conformance_roundtrip.rs
src/: ast.rs  error.rs  lib.rs  scope.rs  stringify.rs  token.rs  value.rs
src/evaluator/: control.rs  deps.rs  enums.rs  eval_node.rs  functions.rs  import.rs  member.rs  mod.rs  ops.rs  stdlib.rs  structs.rs  tests.rs  types.rs
src/lexer/: identifiers.rs  mod.rs  numbers.rs  operators.rs  strings.rs  tests.rs
src/parser/: control.rs  expressions.rs  literals.rs  mod.rs  postfix.rs  standalone_type.rs  tests.rs  type_decl.rs  type_expr.rs
src/value/: format.rs  mod.rs  numeric.rs  ops.rs  serde_impl.rs
tests/: conformance.rs  readme_examples.rs
