# SPDX-FileCopyrightText: © 2026 Suho Kang
# SPDX-License-Identifier: MIT

[package]
name = "uzon"
version = "0.5.0"
edition = "2024"
description = "Parser, evaluator, and value toolkit for UZON — a typed, human-readable data expression format"
license = "MIT"
readme = "README.md"
repository = "https://github.com/uzon-dev/uzon-rust"
homepage = "https://uzon.dev"
keywords = ["uzon", "config", "data-format", "parser", "serde"]
categories = ["config", "parser-implementations", "encoding"]
rust-version = "1.85"

[dependencies]
indexmap = "2"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.149"
